--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
 
-project (libMaker)
+project (libMaker C)
 
-add_executable(main_lib main.cpp)
+add_executable(main_lib main.c)
