--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,10 @@ cmake_minimum_required(VERSION 3.1)
 
 project (libMaker C)
 
-add_executable(main_lib main.c)
+add_executable(${PROJECT_NAME} main.c)
+
+add_subdirectory(uniLib)
+
+target_link_libraries(${PROJECT_NAME}
+    uni
+)
