--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,6 @@ FetchContent_MakeAvailable(googletest)
 
 # Now simply link against gtest or gtest_main as needed. Eg
 add_executable(testRunner testRunner.cpp)
-target_link_libraries(testRunner gtest_main)
+target_link_libraries(testRunner gtest_main uni)
 add_test(NAME functionality_test COMMAND test_fnc)
 
